jogo-da-velha-final

--- a/03-jogo-da-velha/angular.json
+++ b/03-jogo-da-velha/angular.json
@@ -1,11 +1,18 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": false
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "jogo-da-velha": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:application": {
+          "strict": true
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -97,5 +104,6 @@
         }
       }
     }
-  }
+  },
+  "defaultProject": "jogo-da-velha"
 }
