--- a/06-projeto-final/package.json
+++ b/06-projeto-final/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "bootstrap": "^3.4.1",
+    "http-server": "^14.1.1",
     "jquery": "^3.6.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
